tests/extensions/forLoops/semanticErr/forBadAssignment2.wacc
# error -> i = a + 1

# Output:
# semantic_error

# Exit:
# 200

begin
  for (int i = 1; i > 5; i = a + 1) do
    skip
  done
end